--- a/terms.html
+++ b/terms.html
@@ -38,6 +38,9 @@
           <li class="nav-item">
             <a class="nav-link" href="terms.html">الشروط والأحكام</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="privacyPolicy.html">سياسة الخصوصية</a>
+          </li>
 
         </ul>
         <!-- contact us -->
@@ -128,6 +131,7 @@
             <a class="text-secondary" href="index.html">الرئيسية</a>
             <a class="text-secondary" href="index.html#services" data-scroll="services">الحدمات</a>
             <a class="text-secondary" href="terms.html">الشروط والأحكام</a>
+            <a class="text-secondary" href="privacyPolicy.html">سياسة الخصوصية</a>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-12">
